# yo-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
examples/: config.toml  config.yaml
examples/tips/: community.yaml
manifests/n/Nihitdev/Yoo/0.3.0/: Nihitdev.Yoo.installer.yaml  Nihitdev.Yoo.locale.en-US.yaml  Nihitdev.Yoo.yaml
npm/: package.json
npm/scripts/: install.js
src/: app.rs  args.rs  config.rs  content.rs  doctor.rs  fetch.rs  git.rs  main.rs  manifest.rs  project.rs  timer.rs  tips.rs  ui.rs
tests/: cli.rs
